--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- Modules for creating/managing page content, using local scripts-->
-    <script src="/scripts/constants.js" charset="utf-8"></script>
-    <script src="/scripts/textbuilder.js" charset="utf-8"></script>
-    <script src="/scripts/animator.js" charset="utf-8"></script>
-    <script src="/scripts/drawmodewheel.js" charset="utf-8"></script>
-    <script src="/scripts/buildpage.js" charset="utf-8"></script>
+    <script src="/Scripts/constants.js" charset="utf-8"></script>
+    <script src="/Scripts/textbuilder.js" charset="utf-8"></script>
+    <script src="/Scripts/animator.js" charset="utf-8"></script>
+    <script src="/Scripts/drawmodewheel.js" charset="utf-8"></script>
+    <script src="/Scripts/buildpage.js" charset="utf-8"></script>
   </body>
 </html>
