--- a/public/1index.html
+++ b/public/1index.html
@@ -1,3 +1,6 @@
+<!-- Leftovers from when this was a static, single-page app. I migrated it to Node.js to host it on Heroku. -->
+
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
